# datappy

./: .env.example  .gitignore  Dockerfile  Dockerfile.spark  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements_docker.txt
.github/workflows/: deploy.yml
docker/admin-frontend/: Dockerfile
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/v1/: context.py  router.py
src/api/v1/endpoints/: admin.py  transit.py
src/application/consumers/: stop_update.py
src/application/consumers/quixstreams/: stop_update.py
src/application/dto/: route.py  stop.py  trip.py
src/application/producers/: registry.py  trip_update.py
src/application/services/: enums.py  gtfs_loader.py  registry.py
src/application/services/admin/: auth.py  process_manager.py
src/application/services/api/: __init__.py  route_loader.py  stop_loader.py  stop_update_feed.py  trip_loader.py
src/application/services/consumer/: __init__.py
src/application/services/diagram/: __init__.py
src/application/services/populate/: __init__.py  gtfs_loader.py
src/application/services/producer/: __init__.py
src/backend/: __init__.py  dependencies.py  router.py  websocket.py
src/config/: __init__.py  config.py  kafka.py
src/database/: __init__.py  database.py
src/domain/: enums.py
src/domain/admin/: process.py  session.py
src/domain/gtfs/: agency.py  calendar.py  calendar_date.py  enums.py  feed_info.py  route.py  shape.py  stop.py  stop_time.py  transfer.py  trip.py
src/domain/gtfs_rt/: alert.py  enums.py  stop_update.py  trip.py  trip_update.py  vehicle_position.py
src/dto/: gtfs_base.py  gtfs_protocol.py
src/dto/alert/: alert.py
src/dto/alert/informed_entity/: informed_entity.py
src/dto/calendar_date/: __init__.py
src/dto/gtfs/: __init__.py  gtfs_base.py
src/dto/gtfs/agency/: __init__.py  agency.py
src/dto/gtfs/calendar_date/: calendar_date.py
src/dto/gtfs/route/: route.py
src/dto/gtfs/stop/: __init__.py  stop.py
src/dto/gtfs/trip/: __init__.py
src/dto/gtfs_rt/: __init__.py  gtfs_rt_base.py  spark_base.py
src/dto/period/: period.py
src/dto/route/: __init__.py
src/dto/stop/: stop.py
src/dto/stop_time/: __init__.py  stop_time.py
src/dto/text/: text.py
src/dto/transfer/: transfer.py
src/dto/trip/: trip.py
src/dto/update/: __init__.py  update.py
src/dto/vehicle/: __init__.py  vehicle.py
src/enums/: url.py
src/frontend/: client.js  gtfsrt_flow_mockup.html  index.html  pubspec.yaml
src/frontend/admin/: index.html
src/frontend/lib/: main.dart  models.dart
src/frontend/new/: index.html
src/frontend/test/: selection_store_test.dart  stop_update_reconnect_test.dart  stop_update_server_restart_test.dart  widget_test.dart
src/infrastructure/: config.py
src/infrastructure/auth/: google.py  session.py
src/infrastructure/database/: repository.py
src/infrastructure/docker/: adapter.py
src/infrastructure/messaging/: kafka_admin.py  kafka_producer.py
src/init/: __init__.py  extract.py  extract_gtfs.py
src/init/enums/: file_names.py  gtfs_model.py
src/kafka/: __init__.py
(+127 files in other folders)
