[project]
name = "datappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.123.8",
    "grpcio>=1.76.0",
    "grpcio-status>=1.76.0",
    "gtfs-realtime-bindings>=2.0.0",
    "msgspec>=0.20.0",
    "psycopg>=3.3.1",
    "pydantic-settings>=2.12.0",
    "pyspark[sql]>=4.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "sqlalchemy[asyncio]>=2.0.44",
    "ty>=0.0.1a33",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
    "wsproto>=1.3.2",
    "zstandard>=0.25.0",
]

[project.scripts]
datappy = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
