[project]
name = "datappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-status>=1.80.0",
    "gtfs-realtime-bindings>=2.0.0",
    "httpx>=0.28.1",
    "msgspec>=0.21.1",
    "pandas>=3.0.2",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "quixstreams>=3.23.6",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "sqlalchemy[asyncio]>=2.0.49",
    "ty>=0.0.34",
    "types-requests>=2.33.0.20260503",
    "uvicorn>=0.46.0",
    "wsproto>=1.3.2",
    "zstandard>=0.25.0",
]

[project.scripts]
datappy = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["ANN", "I"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false
