[project]
name = "datappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.31.0",
    "diagrams>=0.25.1",
    "docker>=7.1.0",
    "fastapi>=0.138.0",
    "grpcio>=1.81.1",
    "grpcio-status>=1.81.1",
    "gtfs-realtime-bindings>=2.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "msgspec>=0.21.1",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "quixstreams>=3.24.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "ruff>=0.15.18",
    "sqlalchemy[asyncio]>=2.0.51",
    "ty>=0.0.51",
    "types-requests>=2.33.0.20260518",
    "uvicorn>=0.49.0",
    "wsproto>=1.3.2",
    "zstandard>=0.25.0",
]

[project.scripts]
datappy = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["ANN", "I"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false
